fixed Nav date/time sizing and spacing

--- a/src/Components/HomePage/HomePageComponents/Nav/Nav.scss
+++ b/src/Components/HomePage/HomePageComponents/Nav/Nav.scss
@@ -8,14 +8,14 @@
 	position: fixed;
 	top: 0px;
 	padding-bottom: 0.2em;
-	padding-right: 8px;
+	padding-right: 0.2em;
 	display: flex;
 	flex-direction: row;
 	justify-content: end;
 
 	.NavData {
 		height: 100%;
-		width: 8em;
+		width: fit-content;
 		border: $Border;
 		border-right: none;
 		border-top: none;
@@ -29,5 +29,9 @@
 		justify-content: space-between;
 		padding-left: 1em;
 		padding-right: 1em;
+
+		.NavDate {
+			margin-right: 1em;
+		}
 	}
 }
